@@ -11,6 +11,7 @@ import edu.kit.dopler.model.*;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /** Implementation of {@link FeatureAndGroupHandler} */
 public class FeatureAndGroupHandlerImpl implements FeatureAndGroupHandler {
@@ -19,6 +20,8 @@ public class FeatureAndGroupHandlerImpl implements FeatureAndGroupHandler {
     static final String BOOLEAN_QUESTION = "%s?";
     static final String STRING_QUESTION = "What %s?";
     static final String NUMBER_QUESTION = "How much %s?";
+    static final String STRING_DECISION_NAME = "%s#String";
+    static final String NUMBER_DECISION_NAME = "%s#Number";
 
     private final VisibilityHandler visibilityHandler;
     private final IdHandler idHandler;
@@ -55,7 +58,7 @@ public class FeatureAndGroupHandlerImpl implements FeatureAndGroupHandler {
 
     /** Create a decision from the given group. Also check all features inside the group for more groups. */
     public void handleGroup(FeatureModel featureModel, Dopler decisionModel, Group group,
-                             IModelTransformer.STRATEGY level) {
+                            IModelTransformer.STRATEGY level) {
         switch (group.GROUPTYPE) {
             case OR -> handleOrGroup(featureModel, decisionModel, group, level);
             case ALTERNATIVE -> handleAlternativeGroup(group, decisionModel, featureModel, level);
@@ -96,13 +99,12 @@ public class FeatureAndGroupHandlerImpl implements FeatureAndGroupHandler {
     /** Create a decision for each child in the mandatory-group */
     private void handleMandatoryGroup(FeatureModel featureModel, Group group, Dopler dopler,
                                       IModelTransformer.STRATEGY level) {
-
         if (IModelTransformer.STRATEGY.ROUNDTRIP != level) {
             return;
         }
 
         for (Feature feature : group.getFeatures()) {
-            //Only create decision if it has not feature-type or the feature type is boolean
+            //Only create decision if it has no feature-type or the feature type is boolean
             if (null == feature.getFeatureType() || FeatureType.BOOL == feature.getFeatureType()) {
                 createMandatoryDecision(dopler, featureModel, feature, level);
             }
@@ -111,67 +113,66 @@ public class FeatureAndGroupHandlerImpl implements FeatureAndGroupHandler {
 
     private void createMandatoryDecision(Dopler dopler, FeatureModel featureModel, Feature feature,
                                          IModelTransformer.STRATEGY level) {
-        String displayId = idHandler.resolveId(dopler, feature);
-        String question = String.format(ENUM_QUESTION, displayId);
-        IExpression visibilityCondition =
-                visibilityHandler.resolveVisibility(featureModel, dopler, feature.getParentFeature(), level);
-        Set<Rule> rules = new LinkedHashSet<>();
-        Enumeration enumeration = new Enumeration(Set.of(new EnumerationLiteral(displayId)));
-        EnumerationDecision enumerationDecision =
-                new EnumerationDecision(displayId + "#", question, "", visibilityCondition, rules, enumeration, 1, 1);
-
-        dopler.addDecision(enumerationDecision);
+        dopler.addDecision(new EnumerationDecision("%s#".formatted(idHandler.resolveId(dopler, feature)),
+                String.format(ENUM_QUESTION, idHandler.resolveId(dopler, feature)),
+                "",
+                visibilityHandler.resolveVisibility(featureModel, dopler, feature.getParentFeature(), level),
+                new LinkedHashSet<>(),
+                new Enumeration(Set.of(new EnumerationLiteral(idHandler.resolveId(dopler, feature)))),
+                1,
+                1)
+        );
     }
 
     private void createBooleanDecision(Dopler dopler, FeatureModel featureModel, Feature feature,
                                        IModelTransformer.STRATEGY level) {
-        String description = "";
-        IExpression visibility =
-                visibilityHandler.resolveVisibility(featureModel, dopler, feature.getParentFeature(), level);
-        Set<Rule> rules = new LinkedHashSet<>();
-        String id = idHandler.resolveId(dopler, feature);
-        String question = String.format(BOOLEAN_QUESTION, id);
-        dopler.addDecision(new BooleanDecision(id, question, description, visibility, rules));
+        dopler.addDecision(new BooleanDecision(
+                idHandler.resolveId(dopler, feature),
+                String.format(BOOLEAN_QUESTION, idHandler.resolveId(dopler, feature)),
+                "",
+                visibilityHandler.resolveVisibility(featureModel, dopler, feature.getParentFeature(), level),
+                new LinkedHashSet<>())
+        );
     }
 
     private void createNumberDecision(Dopler dopler, FeatureModel featureModel, Feature feature,
                                       IModelTransformer.STRATEGY level) {
-        String id = feature.getFeatureName() + "#Number";
-        String question = String.format(NUMBER_QUESTION, feature.getFeatureName());
-        IExpression visibility =
-                visibilityHandler.resolveVisibilityForTypeDecisions(dopler, featureModel, feature, id, level);
-        Set<Rule> rules = new LinkedHashSet<>();
-        Set<IExpression> validity = new HashSet<>();
-        dopler.addDecision(new NumberDecision(id, question, "", visibility, rules, validity));
+        dopler.addDecision(new NumberDecision(
+                NUMBER_DECISION_NAME.formatted(feature.getFeatureName()),
+                String.format(NUMBER_QUESTION, feature.getFeatureName()),
+                "",
+                visibilityHandler.resolveVisibilityForTypeDecisions(dopler, featureModel, feature,
+                        NUMBER_DECISION_NAME.formatted(feature.getFeatureName()), level),
+                new LinkedHashSet<>(),
+                new HashSet<>())
+        );
     }
 
     private void createStringDecision(Dopler dopler, FeatureModel featureModel, Feature feature,
                                       IModelTransformer.STRATEGY level) {
-        String id = feature.getFeatureName() + "#String";
-        String question = String.format(STRING_QUESTION, feature.getFeatureName());
-        IExpression visibility =
-                visibilityHandler.resolveVisibilityForTypeDecisions(dopler, featureModel, feature, id, level);
-        Set<Rule> rules = new LinkedHashSet<>();
-        Set<IExpression> validity = new HashSet<>();
-        dopler.addDecision(new StringDecision(id, question, "", visibility, rules, validity));
+        dopler.addDecision(new StringDecision(
+                STRING_DECISION_NAME.formatted(feature.getFeatureName()),
+                String.format(STRING_QUESTION, feature.getFeatureName()),
+                "",
+                visibilityHandler.resolveVisibilityForTypeDecisions(dopler, featureModel, feature,
+                        STRING_DECISION_NAME.formatted(feature.getFeatureName()), level),
+                new LinkedHashSet<>(),
+                new HashSet<>())
+        );
     }
 
     private void createEnumDecision(Dopler decisionModel, Group group, FeatureModel featureModel, int maxCardinality,
                                     IModelTransformer.STRATEGY level) {
-        String displayId = idHandler.resolveId(decisionModel, group.getParentFeature());
-        String question = String.format(ENUM_QUESTION, displayId);
-        String description = "";
-        IExpression visibilityCondition =
-                visibilityHandler.resolveVisibility(featureModel, decisionModel, group.getParentFeature(), level);
-        Set<Rule> rules = new LinkedHashSet<>();
-        Set<EnumerationLiteral> literals = new LinkedHashSet<>();
-        group.getFeatures().stream().map(Feature::getFeatureName).map(EnumerationLiteral::new).forEach(literals::add);
-        Enumeration enumeration = new Enumeration(literals);
-        int minCardinality = 1;
-        EnumerationDecision enumerationDecision =
-                new EnumerationDecision(displayId, question, description, visibilityCondition, rules, enumeration,
-                        minCardinality, maxCardinality);
-
-        decisionModel.addDecision(enumerationDecision);
+        decisionModel.addDecision(new EnumerationDecision(
+                idHandler.resolveId(decisionModel, group.getParentFeature()),
+                String.format(ENUM_QUESTION, idHandler.resolveId(decisionModel, group.getParentFeature())),
+                "",
+                visibilityHandler.resolveVisibility(featureModel, decisionModel, group.getParentFeature(), level),
+                new LinkedHashSet<>(),
+                new Enumeration(group.getFeatures().stream().map(Feature::getFeatureName).map(EnumerationLiteral::new)
+                        .collect(Collectors.toCollection(LinkedHashSet::new))),
+                1,
+                maxCardinality)
+        );
     }
 }
